--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,9 @@
 <div class="d-flex">
 
-  <!--Sidebar-->
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">
-      Gifs-App
-    </h3>
-    <hr class="text-white">
-    <div class="list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-    </div>
-  </div>
-  <!--End Sidebar-->
-
-
-  <div class="container">
-    <div class="row p-3">
-
-        <div class="col">
-          <h5>Buscar:</h5>
-          <input type="text" class="form-control" placeholder="Buscar gifs...">
-        </div>
-
-    </div>
-    <hr>
-
-    <div class="row p-3">
-
-      <div class="col">
-        
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, quisquam voluptatibus quaerat libero ipsa voluptatem esse magnam ab, suscipit qui vitae iusto neque voluptatum hic culpa unde fuga quo iure!
-        
-      </div>
-
-    </div>
-
-  </div>
+ 
+  <app-sidebar></app-sidebar>
+  
+  <app-gifs-page class="container"></app-gifs-page>
+  
 </div>
 <router-outlet></router-outlet>
